[gd_scene load_steps=9 format=3 uid="uid://deivqb1e6t55u"]

[ext_resource type="Script" path="res://InteractiveLight/PowerLight.gd" id="1_r1w7e"]
[ext_resource type="Script" path="res://InteractiveLight/LightParts/LightLight.gd" id="2_apf60"]
[ext_resource type="Script" path="res://InteractiveLight/LightParts/BroadSensor.gd" id="3_uefw3"]
[ext_resource type="Script" path="res://InteractiveLight/LightParts/Raycasts/TrackingRays.gd" id="4_u8y6j"]

[sub_resource type="Gradient" id="Gradient_kmnqs"]
colors = PackedColorArray(0.984955, 0.912973, 0.781077, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d22ll"]
gradient = SubResource("Gradient_kmnqs")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_ulv2e"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ed8k0"]
radius = 1.0

[node name="PowerLight" type="Node2D"]
light_mask = 3
visibility_layer = 3
script = ExtResource("1_r1w7e")

[node name="LightLight" type="PointLight2D" parent="."]
scale = Vector2(0.998194, 1)
range_item_cull_mask = 3
shadow_enabled = true
shadow_filter = 2
shadow_item_cull_mask = 3
texture = SubResource("GradientTexture2D_d22ll")
height = 2.0
script = ExtResource("2_apf60")

[node name="BroadSensor" type="Area2D" parent="."]
script = ExtResource("3_uefw3")

[node name="SensorShape" type="CollisionShape2D" parent="BroadSensor"]
light_mask = 3
visibility_layer = 3
shape = SubResource("CircleShape2D_ulv2e")

[node name="TrackingRays" type="Node2D" parent="."]
light_mask = 3
visibility_layer = 3
script = ExtResource("4_u8y6j")

[node name="LightCenter" type="Area2D" parent="."]

[node name="LightCenterCollisionShape2D" type="CollisionShape2D" parent="LightCenter"]
shape = SubResource("CircleShape2D_ed8k0")

[connection signal="area_shape_entered" from="BroadSensor" to="." method="_on_broad_sensor_area_shape_entered"]
[connection signal="area_shape_exited" from="BroadSensor" to="." method="_on_broad_sensor_area_shape_exited"]
[connection signal="body_shape_entered" from="BroadSensor" to="." method="_on_broad_sensor_body_shape_entered"]
[connection signal="body_shape_exited" from="BroadSensor" to="." method="_on_broad_sensor_body_shape_exited"]
[connection signal="body_entered" from="LightCenter" to="." method="_on_light_center_body_entered"]
[connection signal="body_exited" from="LightCenter" to="." method="_on_light_center_body_exited"]
